# prudentia-risk-engine

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
config/: stress_scenarios.yaml
data/models/: scorecard_model.pkl
src/api/: main.py
src/domain/: basel_formulas.py  entities.py
src/engine/: stressor.py
src/processing/: pipeline.py  woe_encoder.py
src/scripts/: inspect_model.py  train_model.py
tests/unit/: test_basel_formulas.py
