[tool.poetry]
name = "prudentia-risk-engine"
version = "0.1.0"
description = "A Basel III/IV Credit Risk & Stress Testing Engine"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
scipy = "^1.11.0"
pandas = "^2.1.0"
pydantic = "^2.5.0"
scikit-learn = "^1.3.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
ruff = "^0.1.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"